030-software/fluxcd/apps/excalidraw/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: excalidraw
