030-software/fluxcd/apps/excalidraw/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw
  annotations:
    dashboard.${domain}/name: excalidraw
    dashboard.${domain}/url: https://excalidraw.${domain}
    dashboard.${domain}/icon: pencil
spec:
  hostnames:
  - excalidraw.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: excalidraw
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
